// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Article 1`] = `
<div>
  <img
    alt="Bøker på et bord"
    src="https://images.unsplash.com/photo-1635335874521-7987db781153?q=80&amp;w=2070&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.1.0&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
    style="width: 100%; height: 200px; object-fit: cover; border-radius: 10px;"
  >
  <div style="display: flex; gap: 10px; margin-top: var(--ds-size-4); margin-bottom: var(--ds-size-3);">
    <h2>
      Rådgivning for lærlinger
    </h2>
    <ul style="list-style: none; display: flex; gap: 10px; padding: 0px; margin: 0px;">
      <li>
        <span
          data-variant="default"
          data-color="accent"
          data-size="sm"
        >
          Videregående
        </span>
      </li>
      <li>
        <span
          data-variant="default"
          data-color="support1"
          data-size="sm"
        >
          Lærling
        </span>
      </li>
    </ul>
  </div>
  <div style="display: flex; align-items: center; gap: 10px; margin-bottom: var(--ds-size-2);">
    <span
      data-variant="circle"
      data-initials="ON"
      role="img"
      aria-label="Kari Nordmann"
      data-size="xs"
    >
    </span>
    <p data-variant="default">
      Ola Nordmann | 19.06.2025
    </p>
  </div>
  <p data-variant="default">
    Fylkeskommunen har plikt til å sørge for at både elever og de som har læretid i bedrift skal ha tilgang til rådgivning om utdannings- og yrkesvalg, samt rådgiving om sosiale og personlige forhold. Dette står i opplæringsloven §§ 16-1 og 16-2.
  </p>
</div>
`;

exports[`Colors 1`] = `
<span
  data-variant="default"
  data-color="neutral"
>
  neutral
</span>
<span
  data-variant="default"
  data-color="accent"
>
  accent
</span>
<span
  data-variant="default"
  data-color="support1"
>
  support1
</span>
<span
  data-variant="default"
  data-color="support2"
>
  support2
</span>
`;

exports[`Icon 1`] = `
<span
  data-variant="default"
  style="padding-inline-start: var(--ds-size-1);"
>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="1em"
    height="1em"
    fill="none"
    viewbox="0 0 24 24"
    focusable="false"
    role="img"
    aria-hidden="true"
    style="margin-inline-end: var(--ds-size-1);"
  >
    <path
      fill="currentColor"
      d="M15 14a.75.75 0 0 1 0 1.5H9A.75.75 0 0 1 9 14zM9.5 9a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3M14.5 9a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3"
    >
    </path>
    <path
      fill="currentColor"
      fill-rule="evenodd"
      d="M12 .5a1.5 1.5 0 0 1 .75 2.798V5h5.5a.75.75 0 0 1 .75.75v3.5h2.24a.75.75 0 0 1 .75.75v4a.75.75 0 0 1-.75.75H19v3.5a.75.75 0 0 1-.75.75H5.75a.75.75 0 0 1-.75-.75v-3.5H2.75A.75.75 0 0 1 2 14v-4a.75.75 0 0 1 .75-.75H5v-3.5A.75.75 0 0 1 5.75 5h5.5V3.298A1.498 1.498 0 0 1 12 .5m-5.5 17h11v-11h-11zm-3-4.25H5v-2.5H3.5zm15.5 0h1.49v-2.5H19z"
      clip-rule="evenodd"
    >
    </path>
  </svg>
  Teksten er KI-generert
</span>
<span
  data-variant="default"
  data-color="support1"
  style="padding-inline-start: var(--ds-size-1);"
>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="1em"
    height="1em"
    fill="none"
    viewbox="0 0 24 24"
    focusable="false"
    role="img"
    aria-hidden="true"
    style="margin-inline-end: var(--ds-size-1);"
  >
    <path
      fill="currentColor"
      fill-rule="evenodd"
      d="M11.997 2.25A3.747 3.747 0 0 0 8.75 7.864a3.292 3.292 0 0 0-.376 6.218l4.486 1.848a2.245 2.245 0 0 1-.857 4.32A2.25 2.25 0 0 1 9.75 18a.75.75 0 0 0-1.5 0 3.75 3.75 0 0 0 3.753 3.75 3.747 3.747 0 0 0 3.247-5.614 3.293 3.293 0 0 0 .376-6.218L11.14 8.07a2.245 2.245 0 0 1 .857-4.32A2.25 2.25 0 0 1 14.25 6a.75.75 0 0 0 1.5 0 3.75 3.75 0 0 0-3.753-3.75m1.2 12.196.057.018.511.184a1.793 1.793 0 0 0 1.29-3.344l-4.251-1.75-.058-.018-.51-.184a1.793 1.793 0 0 0-1.29 3.344z"
      clip-rule="evenodd"
    >
    </path>
  </svg>
  Privatskoleloven
</span>
`;

exports[`Preview 1`] = `
<span
  data-variant="default"
  data-color="success"
>
  Ferdig
</span>
`;

exports[`Sizes 1`] = `
<span
  data-variant="default"
  data-size="sm"
>
  sm
</span>
<span
  data-variant="default"
  data-size="md"
>
  md
</span>
<span
  data-variant="default"
  data-size="lg"
>
  lg
</span>
`;

exports[`Status 1`] = `
<span
  data-variant="default"
  data-color="success"
>
  success
</span>
<span
  data-variant="default"
  data-color="warning"
>
  warning
</span>
<span
  data-variant="default"
  data-color="danger"
>
  danger
</span>
<span
  data-variant="default"
  data-color="info"
>
  info
</span>
`;
